package service

import (
	"context"
	"fmt" // 用于占位符错误

	network "labelwall/biz/model/relationship/network"
	neo4jrepo "labelwall/biz/repo/neo4jrepo" // 导入数据访问层
)

// NetworkService 定义了关系网络服务的业务逻辑接口
// 这些方法对应 Thrift service 中的定义
type NetworkService interface {
	// 网络查询
	GetNetwork(ctx context.Context, req *network.GetNetworkRequest) (*network.GetNetworkResponse, error)
	// 路径查询
	GetPath(ctx context.Context, req *network.GetPathRequest) (*network.GetPathResponse, error)
	// 搜索节点
	SearchNodes(ctx context.Context, req *network.SearchNodesRequest) (*network.SearchNodesResponse, error)
	// 节点 CRUD
	CreateNode(ctx context.Context, req *network.CreateNodeRequest) (*network.CreateNodeResponse, error)
	GetNode(ctx context.Context, req *network.GetNodeRequest) (*network.GetNodeResponse, error)
	UpdateNode(ctx context.Context, req *network.UpdateNodeRequest) (*network.UpdateNodeResponse, error)
	DeleteNode(ctx context.Context, req *network.DeleteNodeRequest) (*network.DeleteNodeResponse, error)
	// 关系 CRUD
	CreateRelation(ctx context.Context, req *network.CreateRelationRequest) (*network.CreateRelationResponse, error)
	GetRelation(ctx context.Context, req *network.GetRelationRequest) (*network.GetRelationResponse, error)
	UpdateRelation(ctx context.Context, req *network.UpdateRelationRequest) (*network.UpdateRelationResponse, error)
	DeleteRelation(ctx context.Context, req *network.DeleteRelationRequest) (*network.DeleteRelationResponse, error)
	// 获取节点的所有关系
	GetNodeRelations(ctx context.Context, req *network.GetNodeRelationsRequest) (*network.GetNodeRelationsResponse, error)
}

// networkService 实现了 NetworkService 接口
type networkService struct {
	nodeRepo     neo4jrepo.NodeRepository
	relationRepo neo4jrepo.RelationRepository
	// 可能还需要其他依赖，如缓存 (Redis) 客户端
	// cache cache.Cache
}

// NewNetworkService 创建一个新的 NetworkService 实例
// 通过依赖注入传入数据访问层的实现
func NewNetworkService(nodeRepo neo4jrepo.NodeRepository, relationRepo neo4jrepo.RelationRepository) NetworkService {
	return &networkService{
		nodeRepo:     nodeRepo,
		relationRepo: relationRepo,
	}
}

// --- 服务方法实现 (占位符) ---

// CreateNode 处理创建节点的业务逻辑
func (s *networkService) CreateNode(ctx context.Context, req *network.CreateNodeRequest) (*network.CreateNodeResponse, error) {
	// 1. 输入验证 (可以在 handler 层做，也可以在 service 层补充)
	if req.Name == "" {
		return &network.CreateNodeResponse{Success: false, Message: "节点名称不能为空"}, nil
	}

	// 2. 调用 repo 层创建节点
	node, err := s.nodeRepo.CreateNode(ctx, req)
	if err != nil {
		// 实际应用中应记录错误日志
		fmt.Printf("Service: CreateNode 失败: %v\n", err)
		return &network.CreateNodeResponse{Success: false, Message: fmt.Sprintf("创建节点失败: %v", err)}, nil // 可以考虑返回更通用的错误信息
	}

	// 3. 构建成功响应
	return &network.CreateNodeResponse{
		Success: true,
		Message: "节点创建成功",
		Node:    node,
	}, nil
}

// GetNode 处理获取节点的业务逻辑
func (s *networkService) GetNode(ctx context.Context, req *network.GetNodeRequest) (*network.GetNodeResponse, error) {
	// TODO: 实现 GetNode 业务逻辑，调用 s.nodeRepo.GetNode
	fmt.Printf("TODO: Service 实现 GetNode, id: %s\n", req.ID)
	return nil, fmt.Errorf("Service: GetNode 未实现")
}

// UpdateNode 处理更新节点的业务逻辑
func (s *networkService) UpdateNode(ctx context.Context, req *network.UpdateNodeRequest) (*network.UpdateNodeResponse, error) {
	// TODO: 实现 UpdateNode 业务逻辑，调用 s.nodeRepo.UpdateNode
	fmt.Printf("TODO: Service 实现 UpdateNode, id: %s\n", req.ID)
	return nil, fmt.Errorf("Service: UpdateNode 未实现")
}

// DeleteNode 处理删除节点的业务逻辑
func (s *networkService) DeleteNode(ctx context.Context, req *network.DeleteNodeRequest) (*network.DeleteNodeResponse, error) {
	// TODO: 实现 DeleteNode 业务逻辑，调用 s.nodeRepo.DeleteNode
	fmt.Printf("TODO: Service 实现 DeleteNode, id: %s\n", req.ID)
	return nil, fmt.Errorf("Service: DeleteNode 未实现")
}

// CreateRelation 处理创建关系的业务逻辑
func (s *networkService) CreateRelation(ctx context.Context, req *network.CreateRelationRequest) (*network.CreateRelationResponse, error) {
	// 1. 输入验证
	if req.Source == "" || req.Target == "" {
		return &network.CreateRelationResponse{Success: false, Message: "源节点和目标节点 ID 不能为空"}, nil
	}

	// 2. 调用 repo 层创建关系
	relation, err := s.relationRepo.CreateRelation(ctx, req)
	if err != nil {
		fmt.Printf("Service: CreateRelation 失败: %v\n", err)
		// 考虑处理特定错误，例如节点不存在
		return &network.CreateRelationResponse{Success: false, Message: fmt.Sprintf("创建关系失败: %v", err)}, nil
	}

	// 3. 构建成功响应
	return &network.CreateRelationResponse{
		Success:  true,
		Message:  "关系创建成功",
		Relation: relation,
	}, nil
}

// GetRelation 处理获取关系的业务逻辑
func (s *networkService) GetRelation(ctx context.Context, req *network.GetRelationRequest) (*network.GetRelationResponse, error) {
	// TODO: 实现 GetRelation 业务逻辑，调用 s.relationRepo.GetRelation
	fmt.Printf("TODO: Service 实现 GetRelation, id: %s\n", req.ID)
	return nil, fmt.Errorf("Service: GetRelation 未实现")
}

// UpdateRelation 处理更新关系的业务逻辑
func (s *networkService) UpdateRelation(ctx context.Context, req *network.UpdateRelationRequest) (*network.UpdateRelationResponse, error) {
	// TODO: 实现 UpdateRelation 业务逻辑，调用 s.relationRepo.UpdateRelation
	fmt.Printf("TODO: Service 实现 UpdateRelation, id: %s\n", req.ID)
	return nil, fmt.Errorf("Service: UpdateRelation 未实现")
}

// DeleteRelation 处理删除关系的业务逻辑
func (s *networkService) DeleteRelation(ctx context.Context, req *network.DeleteRelationRequest) (*network.DeleteRelationResponse, error) {
	// TODO: 实现 DeleteRelation 业务逻辑，调用 s.relationRepo.DeleteRelation
	fmt.Printf("TODO: Service 实现 DeleteRelation, id: %s\n", req.ID)
	return nil, fmt.Errorf("Service: DeleteRelation 未实现")
}

// SearchNodes 处理搜索节点的业务逻辑
func (s *networkService) SearchNodes(ctx context.Context, req *network.SearchNodesRequest) (*network.SearchNodesResponse, error) {
	// TODO: 实现 SearchNodes 业务逻辑，调用 s.nodeRepo.SearchNodes
	fmt.Printf("TODO: Service 实现 SearchNodes, keyword: %s\n", req.Keyword)
	return nil, fmt.Errorf("Service: SearchNodes 未实现")
}

// GetNodeRelations 处理获取节点关系的业务逻辑
func (s *networkService) GetNodeRelations(ctx context.Context, req *network.GetNodeRelationsRequest) (*network.GetNodeRelationsResponse, error) {
	// TODO: 实现 GetNodeRelations 业务逻辑，调用 s.relationRepo.GetNodeRelations
	fmt.Printf("TODO: Service 实现 GetNodeRelations, node_id: %s\n", req.NodeID)
	return nil, fmt.Errorf("Service: GetNodeRelations 未实现")
}

// GetNetwork 处理网络查询的业务逻辑
func (s *networkService) GetNetwork(ctx context.Context, req *network.GetNetworkRequest) (*network.GetNetworkResponse, error) {
	// TODO: 实现 GetNetwork 业务逻辑，调用 s.nodeRepo.GetNetwork
	fmt.Printf("TODO: Service 实现 GetNetwork, profession: %s\n", req.Profession)
	return nil, fmt.Errorf("Service: GetNetwork 未实现")
}

// GetPath 处理路径查询的业务逻辑
func (s *networkService) GetPath(ctx context.Context, req *network.GetPathRequest) (*network.GetPathResponse, error) {
	// TODO: 实现 GetPath 业务逻辑，调用 s.nodeRepo.GetPath
	fmt.Printf("TODO: Service 实现 GetPath, source: %s, target: %s\n", req.SourceID, req.TargetID)
	return nil, fmt.Errorf("Service: GetPath 未实现")
}
